--- a/index.html
+++ b/index.html
@@ -219,11 +219,13 @@
                     "https://www.perplexity.ai/",
                     "https://poe.com/Web-Search",
                     "https://you.com/",
+                    "https://iask.ai/",
                     "https://chat.openai.com/g/g-p1uPsAIqW-super-search",
                     "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
                     "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
-                    "https://www.phind.com/search?home=true",
-                    "https://exa.ai/search?c=all",
+                    "https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert",
+                    "https://www.phind.com/search?Home=true",
+                    "https://metaphor.systems/",
                     "https://www.findera.ai/",
                     "https://komo.ai/"
                 ];
@@ -240,9 +242,11 @@
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
                 <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
+                <li class="item"><a href="https://iask.ai/">iAsk<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Super Search<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Extensive Internet Search<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / PDF Keymate AI Search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / SearchGPT-Web Search Expert<br/></a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
@@ -320,6 +324,7 @@
 
             <ul>
                 <li class="item"><a href="https://poe.com/">Poe<span style="font-size: 0.8em; font-style: italic;"> by Quora</span></a></li>
+                <li class="item"><a href="https://duckduckgo.com/?q=DuckDuckGo&ia=chat"> DuckDuckGO Chat </a></li>
                 <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face # open-source only</span></a></li>
                 <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://chat.forefront.ai/">Forefront</a></li>
@@ -347,8 +352,7 @@
                 <li class="item"><a href="https://explorer.globe.engineer/">Globe Explorer</a></li>
                 <li class="item"><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
                 <li class="item"><a href="https://consillium.vercel.app/">Consillium<span style="font-size: 0.8em; font-style: italic;"> via vercel</span></a></li>
-                <li class="item"><a href="https://iask.ai/"> iAsk </a></li>
-                
+                <li class="item"><a href="https://goblin.tools/"> Magic To-do <span style="font-size: 0.8em; font-style: italic;"> by goblin.tools </span></a></li>
                 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
@@ -384,7 +388,8 @@
                 <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-NjfOntUt3-understanding-papers"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Understanding Papers</a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>                
-                <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> # US Only</span></a></li>
+                <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
+                <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google  # US Only</span></a></li>
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
                 <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>
                 <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>
@@ -450,6 +455,7 @@
                 <li class="item"><a href="https://portal.azure.com/#home">Azure<span style="font-size: 0.8em; font-style: italic;"> # by Micorosft</span></a></li>
                 <li class="item"><a href="https://console.cloud.google.com/vertex-ai?hl=en&project=turing-poet-416719">Vertex<span style="font-size: 0.8em; font-style: italic;"> # by Google</span></a>
                 <li class="item"><a href="https://eu-central-1.console.aws.amazon.com/bedrock/home?region=eu-central-1#/">Bedrock<span style="font-size: 0.8em; font-style: italic;"> # by Amazon</span></a>
+                <li class="item"><a href="hhttps://cloud.llamaindex.ai/"> Llama Cloud <span style="font-size: 0.8em; font-style: italic;"> # by Meta</span></a>
             </ul>
         </div>
     </div>
