--- a/mobile.html
+++ b/mobile.html
@@ -166,6 +166,7 @@
         .card.expanded {
             height: auto;
             background-color: #001524;
+            border: 1px solid #ff660071;
         }
         .card.expanded .urls {
             height: auto;
@@ -202,6 +203,7 @@
         </span>
     </div>
 
+   
 <div class="card" onclick="expandCard(this)">
     <h2 class="header">LLMs</h2>
 
@@ -230,7 +232,7 @@
         <ul>
             <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
             <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
-            <li class="item"><a href="https://tingwu.aliyun.com/home">... 通意听悟</a></li>         
+            <li class="item"><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
             <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
             <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
         </ul>
@@ -325,16 +327,20 @@
         <ul>
             <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
             <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
+            <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>      
+            <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+            <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
+            <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+            
+            <hr size="1" style="margin-left: 0;">
+
             <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
             <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
             <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
             <li class="item"><a href="https://console.anthropic.com/login?selectAccount=true&returnTo=%2Fdashboard">Anthropic Console for Claude</a></li>
             <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
             <li class="item"><a href="https://dashboard.cohere.com/playground/chat">Cohere Playground</a></li>
-            <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
-            <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
-            <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
-            <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+
 
             <hr size="1" style="margin-left: 0;">
 
